2006-11-23  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/core-common.h: Add casts in "*i_p" variants.
	* lightning/i386/asm-32.h: Add _r1.
	* lightning/i386/asm-64.h: Likewise, and add SSE instructions.
	* lightning/i386/asm-i386.h: Merge SSE instructions from Gwenole.
	Use short form for 16-bit AX instructions.  Remove _r1
	* lightning/i386/core-64.h: Add FP ABI support in its infancy.
	* lightning/i386/core-i386.h: Move jit_arg_f and jit_arg_d...
	* lightning/i386/core-32.h: ... and jit_prepare_f and jit_prepare_d...
	* lightning/i386/fp-32.h: ... here.
	* lightning/i386/fp-64.h: Write the code.
	* lightning/sparc/fp.h: Fix jit_extr_{f_d,d_f} register order.
	
2006-11-22  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/asm-i386.h: Move x86-64 instructions...
	* lightning/i386/asm-64.h: ... here.
	* lightning/i386/fp-32.h: Fix bugfixes worked around in froofyJIT.
	Add JIT_FPRET.
	* lightning/sparc/fp.h: Likewise.
	* lightning/ppc/fp.h: Likewise.
	* lightning/fp-common.h: Adjust for JIT_FPRET.
	* tests/funcfp.c: Adjust for JIT_FPRET.
	* tests/rpnfp.c: Adjust for JIT_FPRET.

2006-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/asm-i386.h:  Add an underscore to macros without
	a parameter.

2006-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/core-i386.h: Move jit_movip, jit_check8, jit_reg8,
	jit_reg16, jit_movbrm...
	* lightning/i386/core-32.h: ... here.
	* lightning/i386/core-64.h: Redefine them.  Fix other bugs.

	* tests/printf.c: Do not do a varargs call.

2006-11-20  Paolo Bonzini  <bonzini@gnu.org>

	* lightning/i386/asm-i386.h: Check in rewrite from aranym.
	* lightning/i386/asm-32.h: Adjust.
	* lightning/i386/asm-64.h: Adjust.
	* lightning/i386/fp-32.h: Adjust.

	* lightning/i386/core-32.h: Adjust.  Add jit_{ld,ldx,st,stx}i*.
	* lightning/i386/core-64.h: Adjust.  Add jit_{ld,ldx,st,stx}i*.
	* lightning/i386/core-i386.h: Adjust. Remove these patterns.

2006-11-20  Paolo Bonzini  <bonzini@gnu.org>
